@@ -52,7 +52,7 @@ class SpecialImport extends SpecialPage {
 	 * Execute
 	 */
 	function execute( $par ) {
-		global $wgRequest;
+		global $wgRequest, $wgUser, $wgOut;
 
 		$this->setHeaders();
 		$this->outputHeader();
@@ -60,6 +60,22 @@ class SpecialImport extends SpecialPage {
 		if ( wfReadOnly() ) {
 			global $wgOut;
 			$wgOut->readOnlyPage();
+			return;
+		}
+
+		if( !$wgUser->isAllowedAny( 'import', 'importupload' ) ) {
+			return $wgOut->permissionRequired( 'import' );
+		}
+
+		# TODO: allow Title::getUserPermissionsErrors() to take an array
+		# FIXME: Title::checkSpecialsAndNSPermissions() has a very wierd expectation of what
+		# getUserPermissionsErrors() might actually be used for, hence the 'ns-specialprotected'
+		$errors = wfMergeErrorArrays(
+			$this->getTitle()->getUserPermissionsErrors( 'import', $wgUser, true, array( 'ns-specialprotected' ) ),
+			$this->getTitle()->getUserPermissionsErrors( 'importupload', $wgUser, true, array( 'ns-specialprotected' ) )
+		);
+		if( $errors ){
+			$wgOut->showPermissionsErrorPage( $errors );
 			return;
 		}
 
@@ -145,9 +161,6 @@ class SpecialImport extends SpecialPage {
 
 	private function showForm() {
 		global $wgUser, $wgOut, $wgImportSources, $wgExportMaxLinkDepth;
-		if( !$wgUser->isAllowedAny( 'import', 'importupload' ) ) {
-			return $wgOut->permissionRequired( 'import' );
-		}
 
 		$action = $this->getTitle()->getLocalUrl( array( 'action' => 'submit' ) );
 
